# triarc

./: Cargo.toml
src/: app.rs  main.rs  objects.rs  utils.rs
src/ai/: llm.rs  lm_studio.rs  mod.rs  ollama.rs
src/games/: obscura.rs
