[package]
name = "triarc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
